--- a/css/menu.css
+++ b/css/menu.css
@@ -1,84 +1,97 @@
 nav {
-	background:#528fd5;
+  background: #528fd5;
   margin-top: -65px;
-	position: relative;
+  position: relative;
 }
 
 nav ul {
-	list-style:none;
-	padding:0;
-	margin:0;
-	overflow:hidden;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
 nav > ul > li {
-	float:left;
+  float: left;
 }
 
 nav ul li a {
-	text-decoration:none;
-	color:#fff;
-	display:block;
-	padding:10px 20px;
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 10px 20px;
 }
 
 nav ul li a:hover {
-	background:#3669a3;
+  background: #3669a3;
 }
 
 nav > ul > li:hover div {
-	display:table;
+  display: table;
 }
 
 /*Submenu*/
 nav ul li div {
-	width:1000px;
-	position: absolute;
-	left:0;
-	background:#ccc;
-	box-sizing:border-box;
-	display:none;
+  width: 1000px;
+  position: absolute;
+  left: 0;
+  background: #ccc;
+  box-sizing: border-box;
+  display: none;
 }
 
-nav ul li div ul{
-	width:20%;
-	display:table-cell;
-	border-right:1px solid rgba(255,255,255,.5);
-	box-sizing:border-box;
+nav ul li #boxIdioma {
+  width: 20% !important;
+  left: 442px !important;
+}
+
+nav ul li div ul {
+  width: 20%;
+  display: table-cell;
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
+  box-sizing: border-box;
 }
 
 nav ul li div ul:last-child {
-	border:none;
+  border: none;
 }
 
 nav ul li div ul .titulo {
-	background:#000;
-	color:#fff;
+  background: #000;
+  color: #fff;
 }
 
 nav ul li div ul .titulo a {
-	color:#fff;
-	padding:10px 20px;
+  color: #fff;
+  padding: 10px 20px;
 }
 
-.titulo.azul {background:#3498db;}
-.titulo.verde{background:#27ae60;}
-.titulo.naranja {background:#e67e22;}
-.titulo.rojo {background:#c0392b; color:#000;}
+.titulo.azul {
+  background: #3498db;
+}
+.titulo.verde {
+  background: #27ae60;
+}
+.titulo.naranja {
+  background: #e67e22;
+}
+.titulo.rojo {
+  background: #c0392b;
+  color: #000;
+}
 
 nav ul li div ul .titulo a:hover {
-	background:none;
+  background: none;
 }
 
 nav ul li div ul li a {
-	color:#000;
+  color: #000;
 }
 
 nav ul li div ul li a:hover {
-	color:#fff;
+  color: #fff;
 }
 
-#navegador{
+#navegador {
   margin: auto;
   width: 60%;
-  
 }
