--- a/css/registro-form.css
+++ b/css/registro-form.css
@@ -1,7 +1,7 @@
  .contenedorForm {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 900px;
   background: #fff;
   box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -72,7 +72,8 @@
 }
 
  .contenedorForm .user .formBx form input[type='submit'] {
-  max-width: 100px;
+  max-width: 120px;
+  text-align: center;
   background: #677eff;
   color: #fff;
   cursor: pointer;
