--- a/css/registro-form.css
+++ b/css/registro-form.css
@@ -1,15 +1,37 @@
+#alertUserExist {
+  color: #856404;
+  background-color: #fff3cd;
+  border-color: #ffeeba;
+}
+#robotRegistro{
+  width: 21%;
+  cursor: pointer;
+}
+#alertUserExist h4 {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+#alertUserExist p b {
+  font-weight: 700;
+  color: black;
+
+}
+
 #sexo div {
   width: 50%;
   float: right;
   color: #646363;
   font-size: 14px;
 }
+
 #boxErrores {
   background-color: #f8d7da;
   color: #721c24;
   border-color: #f5c6cb;
   text-align: left;
 }
+
 #boxSuccess {
   color: #155724;
   background-color: #d4edda;
