Verificar cuenta Usuario terminada

--- a/css/registro-form.css
+++ b/css/registro-form.css
@@ -41,6 +41,12 @@
   width: 50%;
   margin: 0 auto;
 }
+#boxSuccess2{
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 50px;
+}
 
 .contenedorForm {
   position: relative;
